fixed backend API for search movies

--- a/frontend/src/Home/Home.css
+++ b/frontend/src/Home/Home.css
@@ -1,4 +1,4 @@
-.movie_card {
+/* .movie_card {
   width: 16rem;
   min-height: 18rem;
 }
@@ -23,4 +23,4 @@
 }
 .float_right {
   float: "right";
-}
+} */
